# LeafTidy

./: .eslintrc.js  .gitignore  DESIGN.md  LICENSE  README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vue.config.js
public/: index.html
src/: App.vue  main.js  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cancel.rs  commands.rs  commands_wechat_id.rs  file_ops.rs  geocode.rs  lib.rs  log.rs  logger.rs  main.rs  metadata.rs  models.rs  task_executor.rs  tauri_main.rs
src/components/: LeftSidebar.vue  RightSidebar.vue
src/composables/: useFileOps.ts  useLayout.ts  useLog.ts
src/pages/: AutoMessage.vue  DataAnalysis.vue  Home.vue  LogAnalysis.vue  LogFiles.vue  LogViewer.vue  Settings.vue  TaskManagement.vue
src/router/: index.ts
src/stores/: task.ts  wechat.ts
src/types/: index.ts
src/utils/: errorHandler.ts  taskStateMachine.ts  time.ts
src/views/: AiClassifyPage.vue  BatchRenamePage.vue  CleanupPage.vue  DuplicateCleanPage.vue  ExifCleanPage.vue  FileOrganizePage.vue  FixDatePage.vue  HomePage.vue  LicenseAgreementPage.vue  LogDetailPage.vue  LogViewPage.vue  PrivacyPolicyPage.vue  SettingsPage.vue  WriteGpsPage.vue
